﻿v1.4.2

General
* Fixed: Issue with rare start-up error (137)

Percentage Monitor
* Fixed: Prevented Axis errors with Percentage Monitor free resize.

Encounters
* Merged with KBM Public Encounters (Details to be updated)

Translations
* German Updates.
----
v1.4.1

Menu
* New: The menu window will now remember which Rift tab you were last in (Base or Storm Legion).

Encounters
* New: When an encounter triggers a victory, all tracked units are entered in to an Ignore List to prevent residual units re-trigger the same encounter.
* Note: Using /kbmreset will force clear this list in the rare events of false positives.

LibSUnit
* Change: When units enter a Partial state, their Combat flag is forced to false.
* Change: When units die, their Combat flag is forced to false.

Mechanic Timers
* New: Repeating and Wait timers can now be forced to stop by using KBM.MechTimer:AddRemove(Timer, true)
* Change: Mechanic Timers can now trigger multiple timers at the same time, at any point in its duration.

Slash Commands
* Fixed: Typing /kbmbuffs USERNAME works again.

Percentage Monitor
* New: Completely redesigned and made to be a module available to any raid encounter.
* New: The graphics have been overhauled.
* New: Ability to freely scale the monitor via the mouse wheel, between 50%-150%.
* New: Middle click [while unlocked] will reset the scale to default (100%)
* New: Option to hide/display Boss names on the monitor.
* New: Option to hide/display Boss percentages on the monitor (text form).
* New: Option to hide/display Boss raid marks on the monitor (represented via internal Rift raid marks).

Res Master
* Change: Name changed to Res Master.
* Change: Enabling [from disabled] Res Master in-game will now update current Raid Res status (rather than requiring a /reloadui)
* Change: Attempted to solve the "Blue Bar" issue with players with missing callings.

Ready Check
* New: Remarkable Oilstone (Rogue, Warrior, 60, High)